Update hotel name in gallery section

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ style="background: url(h2.png) no-repeat center center / cover;">
                 <div class="col-lg-12">
                     <div class="si__section__title pb-50 text-center">
                         <h6>Take a Look Our Gallery</h6>
-                        <h5>Check Out The Our Resort & Beach Club</h5>
+                        <h5>Check Out The Our Route 66 Hotel </h5>
                         <span>4.9 out of 5</span>
                     </div>
                 </div>
